--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.theultimatedomain.testsampleapp.MainActivity">
+    tools:context="com.theultimatedomain.testsampleapp.MainActivity"
+    android:background="#40afc5">
 
     <TextView
         android:layout_width="wrap_content"
