--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="MONEY"
+        android:text="YOUSUCKJOE"
         android:id="@+id/button"
         android:background="#ff00ff"
         android:layout_centerVertical="true"
@@ -33,6 +33,7 @@
         android:layout_height="wrap_content"
         android:text="Scott&apos;s Layout"
         android:id="@+id/btnScottsLayout"
-        android:layout_centerVertical="true"
+        android:layout_alignBaseline="@+id/button"
+        android:layout_alignBottom="@+id/button"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
