--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Scott&apos;s Layout"
+        android:text="scott sucks"
         android:id="@+id/btnScottsLayout"
         android:layout_alignBaseline="@+id/button"
         android:layout_alignBottom="@+id/button"
