--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,12 @@
         android:layout_alignBottom="@+id/button"
         android:layout_centerHorizontal="true" />
 
+	<Button
+		android:id="@+id/simon_activity_btn"
+		android:layout_width = "wrap_content"
+		android:layout_height = "wrap_content"
+		android:text="The Best Activity"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
