--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,18 +18,13 @@
         android:layout_height="wrap_content"
         android:text="The Worst Layout"
         android:id="@+id/button"
-        android:background="#ff00ff"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:background="#ff00ff"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="The Best Layout"
-        android:id="@+id/btnScottsLayout"
-        android:layout_alignBaseline="@+id/button"
-        android:layout_alignBottom="@+id/button"
-        android:layout_centerHorizontal="true" />
+        android:id="@+id/btnScottsLayout" />
 
     <TextView
         android:layout_width="wrap_content"
