--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.theultimatedomain.testsampleapp.MainActivity"
 	android:gravity="center_horizontal"
-    android:background="#40afc5">
+    android:background="#40afc5"
+    android:weightSum="1">
 	
 
     <Button
@@ -23,13 +24,16 @@
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="The Very Best Activity"
         android:id="@+id/btnScottsLayout"
         android:layout_alignBaseline="@+id/button"
         android:layout_alignBottom="@+id/button"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:background="#ffd700"
+        android:layout_weight="0.81"
+        android:textSize="72sp" />
 
 	<Button
 		android:id="@+id/simon_activity_btn"
