--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,4 +38,11 @@
         android:text="Problems"
         android:id="@+id/textView2"
         android:layout_gravity="center_horizontal" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Marshall"
+        android:id="@+id/marshall_button"
+        android:layout_gravity="center_horizontal" />
 </LinearLayout>
