--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,8 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="The Worst Layout"
-        android:id="@+id/button"
+        android:text="Scott Sucks"
+        android:id="@+id/btnScottSucks"
         android:background="#ff00ff"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
