--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         android:textSize="72sp" />
 
 	<Button
-		android:id="@+id/btnSimon"
+		android:id="@+id/simon_activity_btn"
 		android:layout_width = "wrap_content"
 		android:layout_height = "wrap_content"
 		android:text="The Best Activity"/>
@@ -52,6 +52,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Marshall"
-        android:id="@+id/btnMarshall"
+        android:id="@+id/marshall_button"
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
